2009-03-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Rename WebNetscapePluginPackage.m to WebNetscapePluginPackage.mm

        * Plugins/WebNetscapePluginPackage.m: Removed.
        * Plugins/WebNetscapePluginPackage.mm: Copied from mac/Plugins/WebNetscapePluginPackage.m.

2009-03-01  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        WebKit side of <rdar://problem/6449689>

        Pass the visible name to the plug-in host.
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::spawnPluginHost):

2009-02-27  Alice Liu  <alice.liu@apple.com>

        Fix <rdar://problem/6531265> REGRESSION (r39185): adding ".jpeg"
        extension to images that already have .jpg extension

        Reviewed by Oliver Hunt.

        * WebView/WebHTMLView.mm:
        (-[NSString matchesExtensionEquivalent:]):
        (-[WebHTMLView namesOfPromisedFilesDroppedAtDestination:]):
        Relax the check for the proper extension to allow for known
        equivalents, special-cased in matchesExtensionEquivalent function.

2009-02-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoffrey Garen.

        <rdar://problem/6631436>
        CrashTracer: [USER] 1 crash in Safari at com.apple.WebKit • WebKit::NetscapePluginInstanceProxy::addValueToArray + 55
        
        Port the NPN_Evaluate code over from WebCore instead of using the frame loader.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::evaluate):

2009-02-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoffrey Garen.

        WebKit side of <rdar://problem/6626814>.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCInvokeDefault):
        Make InvokeDefault async.
        
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::addValueToArray):